--- a/ToyRobot/ToyRobot.vcxproj
+++ b/ToyRobot/ToyRobot.vcxproj
@@ -142,7 +142,7 @@
     <ClInclude Include="RobotWorld.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Client.cpp" />
     <ClCompile Include="RobotWorld.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
