--- a/ToyRobot/ToyRobot.vcxproj.filters
+++ b/ToyRobot/ToyRobot.vcxproj.filters
@@ -23,7 +23,7 @@
     <ClCompile Include="RobotWorld.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Main.cpp">
+    <ClCompile Include="Client.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
