--- a/ToyRobotTest/ToyRobotTest.vcxproj.filters
+++ b/ToyRobotTest/ToyRobotTest.vcxproj.filters
@@ -20,6 +20,15 @@
     <Text Include="TestFiles\TestFile3.txt">
       <Filter>TestFiles</Filter>
     </Text>
+    <Text Include="TestFiles\TestFile4.txt">
+      <Filter>TestFiles</Filter>
+    </Text>
+    <Text Include="TestFiles\TestFile5.txt">
+      <Filter>TestFiles</Filter>
+    </Text>
+    <Text Include="TestFiles\TestFile6.txt">
+      <Filter>TestFiles</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="TestFiles">
